--- a/.env.example
+++ b/.env.example
@@ -9,9 +9,15 @@ DB_DATABASE=
 # The interval (in milliseconds) for how often the app checks for new messages to send.
 POLLING_INTERVAL_MS=10000
 
+# The number of messages to process in each batch.
+MESSAGE_BATCH_SIZE=10
+
 # The start and end hours (24-hour format) for when scheduled messages are allowed to be sent.
 WORK_HOUR_START=10
 WORK_HOUR_END=19
 
 # The default message the bot sends when it receives a message from a user.
 DEFAULT_REPLY_MESSAGE="Thank you for your message. If you have any questions, feel free to call us at: 02-55014045"
+
+# Set to 'false' to run in non-headless mode for debugging.
+PUPPETEER_HEADLESS=true
