--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "whatsapp-sql-scheduler",
   "version": "1.0.0",
   "description": "A Node.js WhatsApp bot for scheduling and sending messages using a SQL Server backend.",
-  "main": "src/index.js",
+  "main": "dist/bundle.js",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "start:prod": "pm2 start ecosystem.config.js --env production",
+    "stop:prod": "pm2 stop ecosystem.config.js",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -32,7 +35,19 @@
     "mime-types": "^2.1.35",
     "mssql": "^11.0.1",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.33.2",
+    "whatsapp-web.js": "^1.34.0",
     "winston": "^3.13.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.23.2",
+    "@babel/preset-env": "^7.23.2",
+    "babel-loader": "^9.1.3",
+    "pm2": "^5.3.0",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-node-externals": "^3.0.0"
+  },
+  "overrides": {
+    "puppeteer": "^24.19.0"
   }
 }
